<resources>

    <string name="app_name">RoomSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_room_search">Room Search</string>
    <string name="weiter">Weiter</string>
    <string name="stundenplan">Vorlesungen in der Woche</string>
    <string name="standort">Dein Standort</string>
    <string name="mon">Montag</string>
    <string name="aktiv">nicht ausgewählt</string>
    <string name="die">Dienstag</string>
    <string name="mit">Mittwoch</string>
    <string name="don">Donnerstag</string>
    <string name="fre">Freitag</string>
    <string name="finden">Raum finden</string>
    <string name="etage">Auf welcher Etage befindest du dich?</string>
    <string name="test">Deine Position:   Haus Gauß, 3. Etage, Raum B341</string>
    <string name="vorlesung">Raum und Vorlesung</string>
    <string name="ziel">Zielraum</string>
    <string name="eingabe_button">Senden</string>
    <string name="gast">Gast</string>
    <string name="einleitung_login">Willkommen bei Room Search</string>
    <string name="info_login">Hast du bereits ein Profil dann logge dich bitte ein.</string>
    <string name="hrz_text">Benutzername</string>
    <string name="passwort">Passwort</string>
    <string name="lädt">lädt...</string>
    <string name="nichtvorhanden">Noch nicht vorhanden.</string>
    <string name="w_haus">Zu welchem Haus willst du?</string>
    <string name="raumnummer">Raumnummer</string>
    <string name="suchen">Suchen</string>
    <string name="raumnummerinfo">Bitte gebe nur die Raumnummer ohne den Buchstaben an. Wenn du auf Senden drückst wird dein gesuchter Raum angezeigt in dem gewünschten Gebäude.</string>
    <string name="en_welcomeRS">Welcome by Room Search</string>
    <string name="view_raum">Vorlesung</string>
    <string name="button_leer">num</string>
    <string name="_placeholder">-</string>
    <string name="einstellung">Einstellungen</string>
    <string name="qr_code">QR-Code Reader</string>
    <string name="nav_anweisung1">Vorlesung auswählen - kurz drücken</string>
    <string name="nav_anweisung2">Vorlesung Informationen - lange drücken</string>
    <string name="info_login2">Wenn du ein Besucher bist, drücke auf Gast.</string>
    <string name="info_login3">Um ein Profil zu erstellen, drücke auf Profil erstellen.</string>
    <string name="login">Login</string>
    <string name="profil_erstellen">Profil erstellen</string>
    <string name="ac_eingeben">Benutzernamen eingeben</string>
    <string name="vorname">Vorname eingeben</string>
    <string name="nachname">Nachname eingeben</string>
    <string name="mail">Email-Adresse eingeben</string>
    <string name="pa_eingeben">Passwort eingeben</string>
    <string name="pa_wdh">Passwort wiederholen</string>
    <string name="speichern">speichern</string>
    <string name="nutzer_typ">Nutzertyp</string>
    <string name="kam_sicht">Kamera Ansicht</string>
    <string name="campus_position">Campus</string>
    <string name="abstand">Abstand</string>
    <string name="kamera">Kamera</string>
    <string name="standort_campus">Standort Campus</string>
    <string name="raum_information">Rauminfo</string>
    <string name="raum_plan">Raumplan</string>
    <string name="zeitraum">Zeitraum</string>
    <string name="vorlesung_gast">Vorlesungen</string>
    <string name="besondere">Besondere Räume</string>
    <string name="haus_informationen">"Informationen über Namesgeber, wann erbaut, Etagen, Anzahlräume, usw "</string>
    <string name="wfr">Ich finde deinen Raum an der Beuth.</string>
    <string name="auswahl">Menü</string>
    <string name="button_ms">Mein Vorlesungsplan</string>
    <string name="button_erstellen">Stundenplan erstellen</string>
    <string name="button_bearbeiten">Stundenplan bearbeiten</string>
    <string name="button_delete">Stundenplan löschen</string>
    <string name="button_hrz">Beuth Verbindung einrichten</string>
    <string name="vorlesung_erstellen">Vorlesungsblock erstellen</string>
    <string name="checkbox_gast">Dialog Auswahl nicht mehr anzeigen</string>
    <string name="mvs">Mein Vorlesungsplan</string>
    <string name="vle">Vorlesungsplan erstellen</string>
    <string name="raumplanbe">Raumbelegung bearbeiten</string>
    <string name="vlb">Vorlesungsplan bearbeiten</string>
    <string name="vll">Vorlesungsplan löschen</string>
    <string name="plan_txt">Plan erstellen</string>
    <string name="text_341">341</string>
    <string name="raum_plan_bearbeiten">Raumbelegung bearbeiten</string>
    <string name="welcher">Welcher Plan soll bearbeitet werden?</string>
    <string name="vorl">Medienprojekt I</string>
    <string name="haus">Haus Gauß</string>
    <string name="logout">Logout</string>
    <string name="sel_raum_nummer">Raumnummer mit Buchstaben</string>
    <string name="sel_dv">Vorlesungsplan</string>
    <string name="sel_standort">Wegweiser</string>
    <string name="sel_raum_anzeigen">Raum anzeigen</string>
    <string name="deine_position">Deine Position</string>

</resources>