<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_wHaus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="10dip"
            android:text="@string/w_haus"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="124dp"
                    android:gravity="center"
                    android:text="@string/test" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="138dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/qr_code" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <AbsoluteLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/campus_lageplan" />

        <Button
            android:id="@+id/gauss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="85dp"
            android:layout_y="183dp"
            android:rotation="-40" 
            android:background= "@drawable/v_button"/>
        	

        <Button
            android:id="@+id/grashof_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="157dp"
            android:layout_y="122dp"
            android:rotation="-40"
            android:background= "@drawable/v_button" />

        <Button
            android:id="@+id/beuth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="114dp"
            android:layout_y="73dp"
            android:rotation="-40"
            android:background= "@drawable/v_button" />

        <Button
            android:id="@+id/bauwesen_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="240dp"
            android:layout_y="64dp"
            android:rotation="-40"
            android:background= "@drawable/v_button" />

    </AbsoluteLayout>

</LinearLayout>